[gd_scene load_steps=10 format=3 uid="uid://l8fr6hpvoxwl"]

[ext_resource type="Script" path="res://addons/simplenote/note.gd" id="1_ub5lb"]
[ext_resource type="FontFile" uid="uid://irojfre76ihl" path="res://addons/simplenote/CONSOLA.TTF" id="2_l2s4e"]

[sub_resource type="InputEventKey" id="InputEventKey_e8xqj"]
device = -1
ctrl_pressed = true
keycode = 83
unicode = 115

[sub_resource type="Shortcut" id="Shortcut_jui3j"]
events = [SubResource("InputEventKey_e8xqj")]

[sub_resource type="InputEventKey" id="InputEventKey_bacay"]
device = -1
ctrl_pressed = true
keycode = 79

[sub_resource type="Shortcut" id="Shortcut_tpahs"]
events = [SubResource("InputEventKey_bacay")]

[sub_resource type="InputEventKey" id="InputEventKey_so0yq"]
device = -1
ctrl_pressed = true
keycode = 78

[sub_resource type="Shortcut" id="Shortcut_jl8by"]
events = [SubResource("InputEventKey_so0yq")]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_dtqsk"]
number_color = Color(0.643137, 0.643137, 0.65098, 1)
symbol_color = Color(0.643137, 0.643137, 0.65098, 1)
function_color = Color(0.643137, 0.643137, 0.65098, 1)
member_variable_color = Color(0.643137, 0.643137, 0.65098, 1)

[node name="Simplenote" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ub5lb")

[node name="Control" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 2

[node name="Button" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_jui3j")
text = "save
"

[node name="VSeparator" type="VSeparator" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_tpahs")
text = "load"

[node name="FileDialog" type="FileDialog" parent="Control/HBoxContainer/Button2"]
title = "Open a File"
initial_position = 2
size = Vector2i(326, 349)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.json")

[node name="VSeparator2" type="VSeparator" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="Button3" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_jl8by")
text = "new
"

[node name="FileDialog2" type="FileDialog" parent="Control/HBoxContainer/Button3"]
title = "New note"
initial_position = 2
size = Vector2i(406, 400)
dialog_close_on_escape = false
filters = PackedStringArray("*.json")

[node name="VSeparator3" type="VSeparator" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="MenuButton" type="MenuButton" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.29
text = "view"
flat = false
item_count = 15
popup/item_0/text = "symbols"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "Parentheses color"
popup/item_1/checkable = 1
popup/item_1/id = 1
popup/item_2/text = "Quotation marks color"
popup/item_2/checkable = 1
popup/item_2/id = 2
popup/item_3/text = "Braces color"
popup/item_3/checkable = 1
popup/item_3/id = 3
popup/item_4/text = "brackets color "
popup/item_4/checkable = 1
popup/item_4/id = 4
popup/item_5/text = "whitespace"
popup/item_5/id = 5
popup/item_5/separator = true
popup/item_6/text = "Tab visible"
popup/item_6/checkable = 1
popup/item_6/id = 6
popup/item_7/text = "Speces visible"
popup/item_7/checkable = 1
popup/item_7/id = 7
popup/item_8/text = "numbers"
popup/item_8/id = 8
popup/item_8/disabled = true
popup/item_8/separator = true
popup/item_9/text = "numbers color"
popup/item_9/checkable = 1
popup/item_9/id = 9
popup/item_10/text = "move"
popup/item_10/id = 10
popup/item_10/separator = true
popup/item_11/text = "move to docks"
popup/item_11/checkable = 1
popup/item_11/id = 11
popup/item_12/text = "add to bottom docks"
popup/item_12/checkable = 1
popup/item_12/id = 12
popup/item_13/text = ""
popup/item_13/id = 13
popup/item_13/separator = true
popup/item_14/text = "In the future I will add the function of adding custom colors"
popup/item_14/id = 14
popup/item_14/disabled = true

[node name="MenuButton2" type="MenuButton" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.29
text = "view"
flat = false
item_count = 15
popup/item_0/text = "symbols"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "Parentheses color"
popup/item_1/checkable = 1
popup/item_1/id = 1
popup/item_2/text = "Quotation marks color"
popup/item_2/checkable = 1
popup/item_2/id = 2
popup/item_3/text = "Braces color"
popup/item_3/checkable = 1
popup/item_3/id = 3
popup/item_4/text = "brackets color "
popup/item_4/checkable = 1
popup/item_4/id = 4
popup/item_5/text = "whitespace"
popup/item_5/id = 5
popup/item_5/separator = true
popup/item_6/text = "Tab visible"
popup/item_6/checkable = 1
popup/item_6/id = 6
popup/item_7/text = "Speces visible"
popup/item_7/checkable = 1
popup/item_7/id = 7
popup/item_8/text = "numbers"
popup/item_8/id = 8
popup/item_8/disabled = true
popup/item_8/separator = true
popup/item_9/text = "numbers color"
popup/item_9/checkable = 1
popup/item_9/id = 9
popup/item_10/text = "move"
popup/item_10/id = 10
popup/item_10/separator = true
popup/item_11/text = "move to docks"
popup/item_11/checkable = 1
popup/item_11/id = 11
popup/item_12/text = "add to bottom docks"
popup/item_12/checkable = 1
popup/item_12/id = 12
popup/item_13/text = ""
popup/item_13/id = 13
popup/item_13/separator = true
popup/item_14/text = "In the future I will add the function of adding custom colors"
popup/item_14/id = 14
popup/item_14/disabled = true

[node name="HSeparator" type="HSeparator" parent="Control"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Control"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l2s4e")
placeholder_text = "title.."
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextEdit" type="TextEdit" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_l2s4e")
placeholder_text = "note..."
wrap_mode = 1
syntax_highlighter = SubResource("CodeHighlighter_dtqsk")

[node name="SAVED" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1132.0
offset_top = 40.0
offset_right = 1152.0
offset_bottom = 60.0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 14
text = "(*)"
vertical_alignment = 2

[connection signal="pressed" from="Control/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="file_selected" from="Control/HBoxContainer/Button2/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="Control/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="file_selected" from="Control/HBoxContainer/Button3/FileDialog2" to="." method="_on_file_dialog_2_file_selected"]
[connection signal="text_changed" from="Control/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="Control/PanelContainer/MarginContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
